# jeliya

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  LICENSE-APACHE  LICENSE-MIT  PRODUCT.md  README.md  SECURITY.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  release.yml
.impeccable/: design.json
.impeccable/live/: config.json
app/: README.md  pubspec.yaml
app/android/app/: build.gradle.kts
app/lib/: main.dart
app/lib/src/: layout.dart  theme.dart
app/lib/src/ffi/: jeliya_ffi_smoke.dart
app/lib/src/qr/: qr.dart  qr_view.dart
app/lib/src/screens/: boot_screen.dart  composer.dart  fleet_dashboard.dart  mobile_panel.dart  mobile_room.dart  mobile_rooms.dart  mobile_shell.dart  onboarding_identity.dart  onboarding_rooms.dart  right_panel.dart  room_header.dart  settings_panel.dart  shell.dart  sidebar.dart  timeline.dart
app/lib/src/session/: daemon_session.dart  fleet_store.dart  prefs_store.dart  room_homonyms.dart  room_list.dart
app/lib/src/widgets/: buttons.dart  connection_banner.dart  copy_button.dart  modal_scaffold.dart  room_short_id.dart
app/macos/Runner/: DebugProfile.entitlements  Release.entitlements
app/macos/Runner.xcodeproj/: project.pbxproj
app/macos/Runner/Configs/: AppInfo.xcconfig
app/test/: boot_failure_test.dart  design_tokens_test.dart  fleet_test.dart  helpers.dart  invite_flow_test.dart  invite_lifecycle_test.dart  l10n_parity_test.dart  local_action_failure_test.dart  member_self_seam.dart  mobile_back_policy_test.dart  mobile_breakpoint_test.dart  mobile_chat_route_test.dart  mobile_fleet_test.dart  mobile_flow_layout_test.dart  mobile_flows_test.dart  mobile_modal_flows_test.dart  mobile_panel_test.dart  mobile_rooms_screen_test.dart  mobile_settings_test.dart  mobile_shell_test.dart  mobile_tab_bar_test.dart  onboarding_mobile_test.dart  panel_fr_layout_test.dart  predictive_back_test.dart  prefs_store_test.dart  qr_test.dart  room_disambiguation_test.dart  room_list_test.dart  sidebar_scroll_test.dart  timeline_runs_test.dart  timeline_runs_widget_test.dart
assets/: design-tokens.json
crates/bantaba-core/: Cargo.toml
crates/bantaba-core/src/: supervisor.rs
crates/bantabad/: Cargo.toml
crates/bantabad/src/: main.rs  rpc.rs  serve.rs
crates/jeliya-core/: Cargo.toml
crates/jeliya-core/src/: engine.rs  error.rs  fleet.rs  identity.rs  lib.rs  localstate.rs  materializer.rs  supervisor.rs
crates/jeliya-ffi/: Cargo.toml
crates/jeliya-ffi/src/: dart_api.rs  host.rs  lib.rs
crates/jeliyad/: Cargo.toml
crates/jeliyad/src/: lifecycle.rs  main.rs  rpc.rs  serve.rs
dart/jeliya_protocol/: README.md  pubspec.yaml
dart/jeliya_protocol/lib/: ffi.dart  jeliya_protocol.dart  testing.dart
dart/jeliya_protocol/lib/src/: conformance.dart  conventions.dart  daemon_http.dart  ffi_client.dart  frame_router.dart  methods.dart  models.dart  (+3 more)
dart/jeliya_protocol/test/: conformance_test.dart  conventions_test.dart  daemon_http_test.dart  ffi_conformance_test.dart  mock_client_test.dart  models_test.dart  review_regressions_test.dart  supervisor_test.dart
docs/: PROFILE.md  PROTOCOL.md  agent-guide.md  agent-marketplace.md  agent-orchestration.md  capability-status.md  design-tokens.md  gate-a-result.md  glossary-fr.md  i18n.md  index.md  known-gaps-roadmap.md  naming.md  platform-matrix.md  production-deployment-review.md  production-deployment.md  realnet-runbook.md  release-vs-main.md  room-attention.md  room-workbench.md  security-threat-model.md  self-label.md  signing-notarization.md  verification-evidence.md
docs/evidence/v0.5.0/: direct.json  direct.json.sig  historical-schema1-direct.json  historical-schema1-relay.json  preview-direct-schema2.json  relay.json  relay.json.sig
docs/evidence/v0.6.1/: index.md
mockups/: README.md
packaging/: README.md  bantaba.rb  install.ps1  install.sh  jeliya.rb
release/: evidence-ed25519-public.pem
scripts/: agent-e2e.mjs  agent-paths.mjs  bantaba-agent.mjs  build-android-libs.mjs  check-design-tokens.mjs  check-docs.mjs  check-docs.test.mjs  check-installers.test.mjs  check-release.mjs  check-release.test.mjs  check-secret-storage.mjs  check-secret-storage.test.mjs  check-ui-i18n.mjs  check-ui-i18n.test.mjs  daemon-token.mjs  demo-agent.mjs  demo.sh  e2e-port-safety.test.mjs  e2e-process-ownership.mjs  e2e.mjs  fleet-e2e.mjs  gate-a.mjs  jeliya-agent.mjs  jeliya-fleet.mjs  make-bundle.sh  package-macos.mjs  realnet-check.mjs  realnet-evidence.mjs  realnet-evidence.test.mjs  realnet-host.mjs  realnet-lib.mjs  sidecar-check.mjs  smoke.mjs
ui/: index.html  node_modules  package-lock.json  package.json  playwright.config.ts  tsconfig.json  tsconfig.test.json  vite.config.ts
ui/e2e/: a11y.spec.ts  compact-room.spec.ts  compose.spec.ts  composer-height.spec.ts  fixtures.ts  fleet.spec.ts  i18n-layout.spec.ts  invite.spec.ts  modal-containment.spec.ts  onboarding.spec.ts  panels.spec.ts  peer-status.spec.ts  responsive.spec.ts  room-actions.spec.ts  room-disambiguation.spec.ts  room-nav-strip.spec.ts  room-open-recovery.spec.ts  room-recovery-routes.spec.ts  rooms.spec.ts  settings.spec.ts  timeline-position.spec.ts  timeline-runs.spec.ts  tsconfig.json
ui/public/: site.webmanifest
ui/src/: App.tsx  main.tsx  styles.css
ui/src/components/: Composer.tsx  FleetDashboard.tsx  InviteModal.tsx  MobileTabBar.tsx  Onboarding.tsx  QrCode.tsx  RightPanel.tsx  RoomHeader.tsx  RoomNav.tsx  SettingsPanel.tsx  Sidebar.tsx  Timeline.tsx  ui.tsx
ui/src/l10n/: catalog.ts  destinations.ts  en.ts  errorDisplay.ts  formats.ts  fr.ts  l10n.test.ts  locale.ts  strings.tsx  tokens.ts
ui/src/lib/: client.ts  diagnostics.ts  errors.ts  fleet.test.ts  fleet.ts  format.ts  history.ts  invite.test.ts  invite.ts  join.test.ts  join.ts  landmarks.test.ts  landmarks.ts  mock.ts  motion.test.ts  motion.ts  names.ts  protocol.ts  qr.test.ts  qr.ts  roomFlags.test.ts  roomFlags.ts  roomList.test.ts  roomList.ts  rooms.test.ts  rooms.ts  routes.test.ts  routes.ts  shell.test.ts  shell.ts  timelineRuns.test.ts  timelineRuns.ts
(+30 files in other folders)
