[workspace]
members = ["crates/jeliya-core", "crates/jeliyad", "crates/jeliya-ffi"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.91"

[workspace.dependencies]
# Pinned to the published v0.1.0-rc.3 tag commit (carries the cross-room
# isolation remediation, relay seam, join-after-conversation fix, and the
# join-bootstrap capability gate). The local ~/TAC/iroh-room working tree is
# intentionally NOT used (it drifts).
iroh-rooms = { git = "https://github.com/kortiene/iroh-room", rev = "71fbb5007bef4ce83631c94762ec68c2beef3d79", features = ["experimental"] }

[workspace.lints.rust]
unsafe_code = "forbid"
