[workspace]
members = ["crates/jeliya-core", "crates/jeliyad", "crates/jeliya-ffi"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.91"

[workspace.dependencies]
# Pinned to the first upstream main commit carrying the provisional-peer gate
# and store-insert recovery fixes, including the connection-generation follow-ups.
# This revision is deliberately untagged: rc.3 predates the fixes, while later
# main adds CLI-only code Jeliya does not consume. Local working trees may drift.
iroh-rooms = { git = "https://github.com/kortiene/iroh-room", rev = "a5d98b70d717f35d3ce60953a88e12e646f2e871", features = ["experimental"] }

[workspace.lints.rust]
unsafe_code = "forbid"
