[package]
name = "jeliya-core"
version = "0.5.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Jeliya resident core: the only crate in the project that talks to the iroh-rooms SDK"

[features]
default = []
# Publication gate for the diagnostic relay verifier. The reviewed upstream
# feature is now published and pinned (iroh-room tag v0.1.0-rc.2), so this
# forwards to it; the cfg-gated const assertion in lib.rs verifies the upstream
# clear_ip_transports seam is actually active, failing closed otherwise.
relay-only-test = ["iroh-rooms/relay-only-test"]

[dependencies]
# The SDK facade (stable tier + experimental online runtime). This crate is the
# ONLY place in the Jeliya workspace that imports iroh_rooms.
iroh-rooms = { workspace = true }
# iroh's `TransportAddr` ONLY (issue #87). The facade at the pinned rev
# re-exports Endpoint/EndpointAddr/EndpointId/SecretKey (now used via
# iroh_rooms::experimental::session), but NOT `TransportAddr`, which
# `harvest_peer_hints` / `enriched_addr` need to read peers' learned IP socket
# addresses out of `Endpoint::remote_info().addrs()`. No facade path exposes it,
# so this one type keeps a minimal, version-pinned direct dep. Must match the
# `iroh` the pinned iroh-rooms re-exports so the types stay identical (no dup).
iroh = "=1.0.1"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
getrandom = "0.4"
zeroize = "1"
tokio = { version = "1", features = ["rt", "macros", "time", "sync"] }
tracing = "0.1"
# The exact version is security-sensitive: on Windows it commits with
# MOVEFILE_WRITE_THROUGH; on Unix it fsyncs the containing directories.
atomicwrites = "=0.4.4"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }

[lints]
workspace = true
