[package]
name = "jeliyad"
version = "0.4.2"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Jeliya daemon: local-only WebSocket server implementing docs/PROTOCOL.md over jeliya-core"

[[bin]]
name = "jeliyad"
path = "src/main.rs"

[features]
# Embed the built web UI (ui/dist) into the binary so a single `jeliyad`
# serves the SPA on its own loopback origin. Requires `ui/dist` to exist at
# build time (run `npm run build` in ui/ first). Off by default so a plain
# `cargo build` stays a lean WS-only daemon with no UI-build dependency.
embed-ui = ["dep:rust-embed"]

[dependencies]
jeliya-core = { path = "../jeliya-core" }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "sync", "signal"] }
tokio-tungstenite = "0.26"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# HTTP + WebSocket on one loopback port: hyper serves the UI and upgrades /ws.
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
hyper-tungstenite = "0.17"
# Platform data dir + open the UI in the browser on first run.
dirs = "6"
webbrowser = "1"
rust-embed = { version = "8", optional = true, features = ["interpolate-folder-path", "debug-embed"] }
url = "2"

[lints]
workspace = true
